--- a/02_sycl_migrated/CMakeLists.txt
+++ b/02_sycl_migrated/CMakeLists.txt
@@ -7,5 +7,5 @@ add_executable(02_sycl_migrated Samples/0_Introduction/concurrentKernels
 /concurrentKernels.dp.cpp)
 target_link_libraries(02_sycl_migrated sycl)
 
-add_custom_target (run_smo cd ${CMAKE_SOURCE_DIR}/02_sycl_migrated_optimized/ && ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/02_sycl_migrated)
+add_custom_target (run_sm cd ${CMAKE_SOURCE_DIR}/02_sycl_migrated_optimized/ && ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/02_sycl_migrated)
 
